--- a/team14/public/index.html
+++ b/team14/public/index.html
@@ -15,7 +15,7 @@
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
-    <title>T14</title>
+    <title>TEAM14</title>
   </head>
 
   <body>
