--- a/team14/public/index.html
+++ b/team14/public/index.html
@@ -8,7 +8,7 @@
       content="group,members,post,like,comment"
     />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Social media" />
+    <meta name="description" content="Social media web app" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
