--- a/team14/public/index.html
+++ b/team14/public/index.html
@@ -3,10 +3,18 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="theme-color" content="#000000" />
+
+
     <meta
       name="Team14"
       content="group,members,post,like,comment"
     />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Social media web app" />
     <link
@@ -19,6 +27,9 @@
   </head>
 
   <body>
+
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
     
     <div id="root"></div>
     <script
@@ -29,6 +40,8 @@
     <script
       src="https://kit.fontawesome.com/552364ae3b.js"
       crossorigin="anonymous"
+
+
     ></script>
   </body>
 </html>
